# bitcoin-logistic-regression

./: .gitignore  README.md  fetch_data.py  pyproject.toml  requirements.txt  run_pipeline.py
data/: btcusdt_1h.csv
notebooks/: bitcoin_logistic_regression.ipynb  bitcoin_price_direction_logistic_regression.ipynb  bitcoin_price_direction_logistic_regression_chinese.ipynb
scripts/: download_data.py
